# expert_system

./: .dir-locals.el  .gitignore  README.md  draw_goal_tree.py  expert_system.py  goal_tree.py  goal_tree_example.py  main.py  production.py  pyproject.toml  requirements.txt  rules.py  rules_apple.py  rules_example_bird.py  rules_poker.py  rules_rock.py  rules_simpsons.py  three_valued_logic.py  utils.py
app/: app.py
src/expert_system/: DAG.py  draw_goal_tree.py  expert_system.py  goal_tree.py  goal_tree2.py  nlp.py  spongebob_rules.py  three_valued_logic.py  zoo_rules.py
src/expert_system/app/: app.py
src/expert_system/app/templates/: akinator.html  encyclopedia.html  encyclopedia_fact.html  playground.html
